# LCEdit

./: .gitmodules  .travis.yml  CMakeLists.txt  README
.github/workflows/: c-cpp.yml
res/: lcedit.appdata.xml  lcedit.desktop
scripts/: travis_before_script.sh  travis_deploy_qt.sh
src/: include.h  lcedit.cpp  lcedit.h  lcedit.ui  main.cpp  plugin.h
src/lib/: c4group.cpp  c4group.h  lcsettings.cpp  lcsettings.h
src/plugins/: c4group.cpp  c4group.h  c4group.json  graphicsviewer.cpp  graphicsviewer.h  graphicsviewer.json  search.cpp  search.h  search.json  search.ui  texteditor.cpp  texteditor.h  texteditor.json  workspaces.cpp  workspaces.h  workspaces.json
